--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h2>John Dagsa</h2>
         <p class="tagline">Web Developer</p>
         <div class="contact-links">
-            <a href="https://github.com/jdvgsa">Homepage</a>
+            <a href="https://jdvgsa.github.io/my-portfolio/">Homepage</a>
             <a href="linkedin.com/in/john-arnold-dagsa-47b9012a3">LinkedIn</a>
             <a href="https://github.com/jdvgsa">GitHub</a>
            
